[package]
name = "api_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.49.1", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
futures = "0.3"
